...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comic_recyclerview"
            style="@style/StyleScrollbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
...
            app:layout_constraintTop_toBottomOf="@id/constraintlayout_title"
            tools:listfooter="@layout/item_comic"
            tools:listheader="@layout/item_comic"
            tools:listitem="@layout/item_comic" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/favoritos"
            android:src="@drawable/ic_favorite_filled"
            app:backgroundTint="@color/white"
...
