...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imagebutton_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/favoritar"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@{comicmodel.favorite ? @drawable/ic_favorite_filled : @drawable/ic_favorite_outline}"
...
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{comicmodel.description}"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toTopOf="@+id/button_character"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_name"
                    tools:text="Descricao" />

                <Button
...
